fix(text-field): text overflowing icons

--- a/packages/elvis/src/components/form/input.scss
+++ b/packages/elvis/src/components/form/input.scss
@@ -68,6 +68,10 @@ $form-input-padding-compact-active: 3px 9px;
     right: 4px;
   }
 
+  &:has(.e-btn.e-btn--icon) > input {
+    padding-right: 40px;
+  }
+
   &.e-input---invalid > input,
   &.e-input---invalid > textarea {
     padding: $form-input-padding-active;
@@ -274,6 +278,10 @@ $form-input-padding-compact-active: 3px 9px;
     > textarea {
       padding: $form-input-padding-compact-active;
     }
+  }
+
+  &:has(.e-btn.e-btn--icon) > input {
+    padding-right: 32px;
   }
 
   .e-btn.e-btn--icon {
